try to fix some features 2

--- a/Momentum.css
+++ b/Momentum.css
@@ -653,6 +653,11 @@ input::placeholder{
     #time{
         font-size: 100px;
     }
+
+    #greetingellipsis{
+        display: flex;
+    }
+
     #greeting{
         font-size: 35px;
     }
@@ -711,6 +716,9 @@ input::placeholder{
     }
     #greeting{
         font-size: 28px;
+    }
+    #greetingellipsis{
+        display: flex;
     }
     #goal{
         font-size: 19px;
@@ -786,6 +794,9 @@ input::placeholder{
 @media (max-width: 400px) and (min-width:270px) {
     #time{
         font-size: 50px;
+    }
+    #greetingellipsis{
+        display: flex;
     }
     #greeting{
         font-size: 24px;
