--- a/Momentum.css
+++ b/Momentum.css
@@ -138,7 +138,8 @@ main {
 
 #greetingellipsis {
     position: absolute;
-    display: none;
+    /* display: none; */
+    display: flex;
     transform: translateX(250px);
     font-size: 20px;
     border-radius: 30px;
@@ -653,11 +654,7 @@ input::placeholder{
     #time{
         font-size: 100px;
     }
-
-    #greetingellipsis{
-        display: flex;
-    }
-
+    
     #greeting{
         font-size: 35px;
     }
@@ -716,9 +713,6 @@ input::placeholder{
     }
     #greeting{
         font-size: 28px;
-    }
-    #greetingellipsis{
-        display: flex;
     }
     #goal{
         font-size: 19px;
@@ -794,9 +788,6 @@ input::placeholder{
 @media (max-width: 400px) and (min-width:270px) {
     #time{
         font-size: 50px;
-    }
-    #greetingellipsis{
-        display: flex;
     }
     #greeting{
         font-size: 24px;
