--- a/Momentum.css
+++ b/Momentum.css
@@ -884,6 +884,7 @@ input::placeholder{
 
 @media (max-width: 400px) {
     #time{
+        letter-spacing: 1px;
         font-size: 50px;
     }
     #greeting{
