--- a/Momentum.css
+++ b/Momentum.css
@@ -838,6 +838,8 @@ input::placeholder{
         text-align: center;
     }
     #quoteEllipsis{
+        
+        padding: 4px 5px;
         position: static;
         height: auto;
         transform: translate(0px);
@@ -925,12 +927,34 @@ input::placeholder{
         padding: 0px;
     }
 
+    #inputQuote{
+        min-width: 20ch;
+        outline: none;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid rgba(253,253,253, .7);
+        font-size: 20px;
+        color: rgb(255,255,255);
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-content: center;
+    }
+
     .quoteContainer{
         height: 50%;
         width: max-content;
         max-width: 200px;
         text-wrap: wrap !important;
     }
+
+    #inputQuote::placeholder{
+        font-size: 16px;
+        color: rgba(255,255,255,.6);
+    }
+
+
 
     #botmidToolTip{
         position: static;
@@ -941,6 +965,7 @@ input::placeholder{
         text-align: center;
     }
     #quoteEllipsis{
+        padding: 4px 5px;
         position: static;
         height: auto;
         transform: translate(0px);
@@ -987,6 +1012,50 @@ input::placeholder{
 
     #editname::before{
         transform: translateX(5px) translateY(-10px) rotate(45deg);    
+    }
+
+    #inputQuote{
+        height: 50px;
+        width: 30%;
+        min-width: 20ch;
+        outline: none;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid rgba(253,253,253, .7);
+        font-size: 20px;
+        color: rgb(255,255,255);
+        padding: 0;
+        text-wrap: wrap;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-content: center;
+    }
+    #inputQuote::placeholder{
+        font-size: 13px;
+        color: rgba(255,255,255,.6);
+    }
+
+    #tooltiptext{
+        width: 125px;
+        transform: translateX(70%) translateY(-5%);
+    }
+
+    #tooltiptext{
+     border:1px solid white;
+     border-radius: 2px;
+    }
+
+    #refresh,  #personalise{
+        width: max-content;
+    }
+
+    #tooltiptext p{
+        font-size: 12px !important;
+    }
+
+    #quoteEllipsis{
+        padding: 4px 5px;
     }
   
 }
