--- a/Momentum.css
+++ b/Momentum.css
@@ -1,5 +1,4 @@
 html, body {
-    height: 100%;
     width: 100%;
     margin: 0px;
     padding: 0px;
@@ -10,20 +9,27 @@ html, body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
+    /* position: absolute; */
+    position: relative;
+    /* min-height: 100%;
+    max-height: auto; */
+    min-height: 100vh;
     width: 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     color:rgb(255, 255, 255);
     font-family: sans-serif;
+    overflow: hidden;
 }
 
 header {
     display: flex;
     justify-content: space-between;
     flex: 20%;
+    position: relative;
 }
 
 #top-left {
@@ -35,7 +41,7 @@ header {
     rgba(0,0,0,0),
     rgba(0,0,0,0)
     );
-    width: 300px;
+    width: 50%;
     height: 100px;
     padding-top: 1%;
     padding-left: 1%;
@@ -45,22 +51,25 @@ header {
     gap: 10%;
 }
 
+#links{
+    width: 60%;
+}
+
+
 #top-right {
-    background: radial-gradient(farthest-corner at 250px 20px,
-    rgba(0,0,0,.2) 20%,
-    rgba(0, 0, 0, .15),
+    background: radial-gradient(farthest-corner at 50px 20px,
+    rgba(0,0,0,0),
+    rgba(0,0,0,0),
+    rgba(0,0,0,0),
     rgba(0,0,0,.05),
-    rgba(0,0,0,0),
-    rgba(0,0,0,0),
-    rgba(0,0,0,0)
+    rgba(0, 0, 0, .15),
+    rgba(0,0,0,.9) 20%,
     );
-    width: 300px;
+    width: 50%;
     height: 100px;
     font-size: 26px;
     padding-top: 1%;
     padding-right: 1%;
-    display: flex;
-    justify-content: flex-end;
 }
 
 #gap {
@@ -1085,9 +1094,10 @@ input::placeholder{
 
 
 @media (max-height: 900px) {
-    main{
+    
+    /* main{
         flex:30%
-    }
+    } */
 
     #time{
         font-size: 120px;
